# techserv-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_password_hash.py
app/: main.py
app/api/v1/: auth.py  health.py  router.py  users.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: __init__.py  base_models.py
app/schemas/: auth.py  user.py
docs/: diagrama-actividades.md  diagrama-casos-de-uso.md  diagrama-de-clases.md  diagrama-er.md  diagrama-secuencias.md
scripts/: seed_admin.py
tests/: conftest.py  test_api.py  test_security.py
