[project]
name = "techserv-backend"
version = "0.1.0"
description = "TechServ backend API"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/models/**" = ["F821"]

[tool.coverage.run]
source = ["app"]
